first change in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
             <div id="sort-container">
                 <label for="sort-options">Sort by:</label>
                 <select id="sort-options">
+                    <option value="relevance">Relevance</option>
                     <option value="price">Price</option>
                     <option value="rating_count">Rating Count</option>
                     <option value="avg_rating">Average Rating</option>
