--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,24 +8,24 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Product List</h1>
-    <div class="container">
-        <div>
+    <!-- <h1>Product List</h1> -->
+    <div class="main">
+        <div class="container">
             <div id="search-container">
-                <label for="search-query">Search:</label>
+                <!-- <label for="search-query">Search:</label> -->
                 <input type="text" id="search-query" placeholder="Enter product name">
             </div>
+            <button id="search-button">Search</button>
             <div id="sort-container">
-                <label for="sort-options">Sort by:</label>
+                <!-- <label for="sort-options">Sort by:</label> -->
                 <select id="sort-options">
-                    <option value="relevance">Relevance</option>
+                    <!-- <option value="relevance">Relevance</option> -->
                     <option value="price">Price</option>
                     <option value="rating_count">Rating Count</option>
                     <option value="avg_rating">Average Rating</option>
                     <!-- <option value="product_name">Product Name</option> -->
                 </select>
             </div>
-            <button id="search-button">Search</button>
         </div>
         <div id="loading-indicator" class="loading" style="display: none;">Searching...</div>
         
