--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="image/iconmonstr-chart-3-240.png">
 </head>
 <body>
     <!-- <h1>Product List</h1> -->
@@ -30,6 +30,11 @@
         <div id="loading-indicator" class="loading" style="display: none;">Searching...</div>
         
         <div id="product-list"></div>
+        <div id="github-logo">
+            <a href="https://github.com">
+                <img src="https://user-images.githubusercontent.com/74038190/212257468-1e9a91f1-b626-4baa-b15d-5c385dfa7ed2.gif" alt="github-logo">
+            </a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
