--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
         <div id="product-list"></div>
         <div id="github-logo">
             <a href="https://github.com">
-                <img src="https://user-images.githubusercontent.com/74038190/212257468-1e9a91f1-b626-4baa-b15d-5c385dfa7ed2.gif" alt="github-logo">
+                <img src="image/github.gif" alt="github-logo">
             </a>
         </div>
     </div>
