--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
             <button id="search-button">Search</button>
         </div>
         <div id="loading-indicator" class="loading" style="display: none;">Searching...</div>
-        <div id="sort-container" style="display: none;">
+        <div id="sort-container" >
             <!-- <label for="sort-options">Sort by:</label> -->
             <select id="sort-options">
                 <!-- <option value="relevance">Relevance</option> -->
