final final commit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
         <div id="product-list"></div>
         <div id="github-logo">
             <a href="https://github.com">
-                <img src="image/github.gif" alt="github-logo">
+                <img src="image/iconmonstr-github-1-240.png" alt="github-logo">
             </a>
         </div>
     </div>
