made few changes in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="product-list"></div>
         <div id="github-logo">
-            <a href="https://github.com">
+            <a href="https://github.com/raushan2410/DealNavigator">
                 <img src="image/iconmonstr-github-1-240.png" alt="github-logo">
             </a>
         </div>
